--- a/HousePrice.ipynb
+++ b/HousePrice.ipynb
@@ -2,6 +2,270 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel('DATA RUMAH.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NO</th>\n",
+       "      <th>NAMA RUMAH</th>\n",
+       "      <th>HARGA</th>\n",
+       "      <th>LB</th>\n",
+       "      <th>LT</th>\n",
+       "      <th>KT</th>\n",
+       "      <th>KM</th>\n",
+       "      <th>GRS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Rumah Murah Hook Tebet Timur, Tebet, Jakarta S...</td>\n",
+       "      <td>3800000000</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Rumah Modern di Tebet dekat Stasiun, Tebet, Ja...</td>\n",
+       "      <td>4600000000</td>\n",
+       "      <td>180</td>\n",
+       "      <td>137</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rumah Mewah 2 Lantai Hanya 3 Menit Ke Tebet, T...</td>\n",
+       "      <td>3000000000</td>\n",
+       "      <td>267</td>\n",
+       "      <td>250</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Rumah Baru Tebet, Tebet, Jakarta Selatan</td>\n",
+       "      <td>430000000</td>\n",
+       "      <td>40</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Rumah Bagus Tebet komp Gudang Peluru lt 350m, ...</td>\n",
+       "      <td>9000000000</td>\n",
+       "      <td>400</td>\n",
+       "      <td>355</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1005</th>\n",
+       "      <td>1006</td>\n",
+       "      <td>Rumah Strategis Akses Jalan 2mobil Di Menteng ...</td>\n",
+       "      <td>9000000000</td>\n",
+       "      <td>450</td>\n",
+       "      <td>550</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1006</th>\n",
+       "      <td>1007</td>\n",
+       "      <td>Tebet Rumah Siap Huni Jln 2 Mbl Nyaman</td>\n",
+       "      <td>4000000000</td>\n",
+       "      <td>160</td>\n",
+       "      <td>140</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1007</th>\n",
+       "      <td>1008</td>\n",
+       "      <td>Di Kebun Baru Rumah Terawat, Area Strategis</td>\n",
+       "      <td>4000000000</td>\n",
+       "      <td>139</td>\n",
+       "      <td>230</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1008</th>\n",
+       "      <td>1009</td>\n",
+       "      <td>Dijual Cepat Rumah Komp Depkeu Dr Soepomo Tebe...</td>\n",
+       "      <td>19000000000</td>\n",
+       "      <td>360</td>\n",
+       "      <td>606</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1009</th>\n",
+       "      <td>1010</td>\n",
+       "      <td>Dijual Rumah Kokoh Di Gudang Peluru</td>\n",
+       "      <td>10500000000</td>\n",
+       "      <td>420</td>\n",
+       "      <td>430</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1010 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        NO                                         NAMA RUMAH        HARGA  \\\n",
+       "0        1  Rumah Murah Hook Tebet Timur, Tebet, Jakarta S...   3800000000   \n",
+       "1        2  Rumah Modern di Tebet dekat Stasiun, Tebet, Ja...   4600000000   \n",
+       "2        3  Rumah Mewah 2 Lantai Hanya 3 Menit Ke Tebet, T...   3000000000   \n",
+       "3        4           Rumah Baru Tebet, Tebet, Jakarta Selatan    430000000   \n",
+       "4        5  Rumah Bagus Tebet komp Gudang Peluru lt 350m, ...   9000000000   \n",
+       "...    ...                                                ...          ...   \n",
+       "1005  1006  Rumah Strategis Akses Jalan 2mobil Di Menteng ...   9000000000   \n",
+       "1006  1007             Tebet Rumah Siap Huni Jln 2 Mbl Nyaman   4000000000   \n",
+       "1007  1008        Di Kebun Baru Rumah Terawat, Area Strategis   4000000000   \n",
+       "1008  1009  Dijual Cepat Rumah Komp Depkeu Dr Soepomo Tebe...  19000000000   \n",
+       "1009  1010                Dijual Rumah Kokoh Di Gudang Peluru  10500000000   \n",
+       "\n",
+       "       LB   LT  KT  KM  GRS  \n",
+       "0     220  220   3   3    0  \n",
+       "1     180  137   4   3    2  \n",
+       "2     267  250   4   4    4  \n",
+       "3      40   25   2   2    0  \n",
+       "4     400  355   6   5    3  \n",
+       "...   ...  ...  ..  ..  ...  \n",
+       "1005  450  550  10  10    3  \n",
+       "1006  160  140   4   3    2  \n",
+       "1007  139  230   4   4    1  \n",
+       "1008  360  606   7   4    0  \n",
+       "1009  420  430   7   4    2  \n",
+       "\n",
+       "[1010 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1010, 8)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(\"HARGA\", axis=1)\n",
+    "y = df[\"HARGA\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +273,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
