--- a/HousePrice.ipynb
+++ b/HousePrice.ipynb
@@ -450,6 +450,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hai cici\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hai cici\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
