--- a/HousePrice.ipynb
+++ b/HousePrice.ipynb
@@ -450,19 +450,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hai cici\n"
+      "Hai cici 2\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hai cici\")"
+    "print(\"Hai cici 2\")"
    ]
   },
   {
@@ -489,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
