--- a/WebScrapCode.ipynb
+++ b/WebScrapCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,89 +39,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Inisialisasi webdriver\n",
-    "# driver = webdriver.Chrome()\n",
-    "\n",
-    "# # Fungsi untuk menghasilkan URL halaman berdasarkan nomor halaman\n",
     "# def generate_page_url(base_url, page_number):\n",
-    "#     page_url = base_url.replace('/page.1/', f'/page.{page_number}/')\n",
+    "#     page_url = base_url.replace('/page=1/', f'/page={page_number}/')\n",
     "#     return page_url\n",
     "\n",
-    "# # URL base\n",
-    "# base_url = 'https://rumah.trovit.co.id/index.php/cod.search_adwords_homes/type.1/what_d.Nusa%20Tenggara%20Barat/origin.1/ppc_landing_type.2/rooms_min.0/bathrooms_min.0/property_type.Rumah/region.Nusa Tenggara Barat/order_by.relevance/resultsPerPage.25/isUserSearch.1/page.1'\n",
-    "\n",
-    "# # Set nomor halaman pertama\n",
-    "# page_number = 1"
+    "def generate_page_url(base_url, page_number):\n",
+    "    url_parts = base_url.split('=')\n",
+    "    url_parts[-1] = str(page_number)\n",
+    "    page_url = '='.join(url_parts)\n",
+    "    return page_url\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Loop untuk halaman-halaman\n",
-    "# while True:\n",
-    "#     # Generate URL untuk halaman saat ini\n",
-    "#     current_page_url = generate_page_url(base_url, page_number)\n",
-    "    \n",
-    "#     # Buka halaman\n",
-    "#     driver.get(current_page_url)\n",
-    "    \n",
-    "#     # Tunggu hingga halaman selesai dimuat\n",
-    "#     WebDriverWait(driver, 10).until(EC.url_to_be(current_page_url))\n",
-    "    \n",
-    "#     # Lakukan scraping pada halaman saat ini\n",
-    "#     # ...\n",
-    "    \n",
-    "#     # Lakukan pengecekan apakah ada halaman berikutnya atau tidak\n",
-    "#     try:\n",
-    "#         next_button = driver.find_element(By.XPATH, '//p[@class=\"trovit-paginator\"]/a[@class=\"trovit-button no-background next\"]')\n",
-    "#         if not next_button.is_enabled():\n",
-    "#             break\n",
-    "#     except:\n",
-    "#         break\n",
-    "    \n",
-    "#     # Pindah ke halaman berikutnya\n",
-    "#     page_number += 1\n",
+    "# Scrape Link to Detail Page\n",
+    "dashboard_url = 'https://www.lamudi.co.id/west-nusa-tenggara/house/buy/?page=1'\n",
+    "driver = webdriver.Chrome()\n",
+    "wait = WebDriverWait(driver, 10)\n",
     "\n",
-    "# # Tutup webdriver\n",
-    "# driver.quit()\n"
+    "for page_number in range(1, 21):  # Ubah 20 menjadi 21 untuk memperoleh halaman 1 hingga 20\n",
+    "    current_page_url = generate_page_url(dashboard_url, page_number)\n",
+    "    driver.get(current_page_url)\n",
+    "\n",
+    "    # STATIS\n",
+    "    # soup = BeautifulSoup(driver.page_source, 'html.parser')  # Menggunakan driver.page_source untuk konten halaman\n",
+    "    # links = soup.find_all('a', class_='ListingCell-moreInfo-button-v2_redesign')\n",
+    "    # for link in links:\n",
+    "    #     print(link['href'])\n",
+    "\n",
+    "    # Tunggu hingga konten dinamis selesai dimuat\n",
+    "    wait.until(EC.presence_of_element_located((By.CLASS_NAME, 'ListingCell-moreInfo-button-v2_redesign')))\n",
+    "    \n",
+    "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
+    "    links = soup.find_all('a', class_='ListingCell-moreInfo-button-v2_redesign')\n",
+    "    \n",
+    "    for link in links:\n",
+    "        print(link['href'])\n",
+    "    \n",
+    "    print(len(links))\n",
+    "    \n",
+    "driver.quit()  # Tutup browser setelah selesai scraping\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PAGE  1  LESGO!\n",
-      "GO!  1\n",
-      "Menemukan (Menampilkan Lebih Banyak)\n"
-     ]
-    },
-    {
-     "ename": "TimeoutException",
-     "evalue": "Message: timeout: Timed out receiving message from renderer: -331.937\n  (Session info: chrome=113.0.5672.126)\nStacktrace:\n0   chromedriver                        0x00000001031538ac chromedriver + 4257964\n1   chromedriver                        0x000000010314bf40 chromedriver + 4226880\n2   chromedriver                        0x0000000102d889d4 chromedriver + 281044\n3   chromedriver                        0x0000000102d7284c chromedriver + 190540\n4   chromedriver                        0x0000000102d72574 chromedriver + 189812\n5   chromedriver                        0x0000000102d71198 chromedriver + 184728\n6   chromedriver                        0x0000000102d71620 chromedriver + 185888\n7   chromedriver                        0x0000000102d7f22c chromedriver + 242220\n8   chromedriver                        0x0000000102d92b8c chromedriver + 322444\n9   chromedriver                        0x0000000102d71b20 chromedriver + 187168\n10  chromedriver                        0x0000000102d929d8 chromedriver + 322008\n11  chromedriver                        0x0000000102dfa9bc chromedriver + 747964\n12  chromedriver                        0x0000000102db798c chromedriver + 473484\n13  chromedriver                        0x0000000102db898c chromedriver + 477580\n14  chromedriver                        0x0000000103112900 chromedriver + 3991808\n15  chromedriver                        0x0000000103116354 chromedriver + 4006740\n16  chromedriver                        0x0000000103116940 chromedriver + 4008256\n17  chromedriver                        0x000000010311c33c chromedriver + 4031292\n18  chromedriver                        0x0000000103116f34 chromedriver + 4009780\n19  chromedriver                        0x00000001030ef490 chromedriver + 3847312\n20  chromedriver                        0x00000001031349f4 chromedriver + 4131316\n21  chromedriver                        0x0000000103134b4c chromedriver + 4131660\n22  chromedriver                        0x0000000103145230 chromedriver + 4198960\n23  libsystem_pthread.dylib             0x00000001a7cee06c _pthread_start + 148\n24  libsystem_pthread.dylib             0x00000001a7ce8e2c thread_start + 8\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 36\u001b[0m\n\u001b[1;32m     34\u001b[0m i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     35\u001b[0m detail_url \u001b[39m=\u001b[39m link[\u001b[39m'\u001b[39m\u001b[39mhref\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m---> 36\u001b[0m driver\u001b[39m.\u001b[39;49mget(detail_url)\n\u001b[1;32m     37\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mGO! \u001b[39m\u001b[39m\"\u001b[39m, i)\n\u001b[1;32m     38\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/selenium/webdriver/remote/webdriver.py:449\u001b[0m, in \u001b[0;36mWebDriver.get\u001b[0;34m(self, url)\u001b[0m\n\u001b[1;32m    447\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(\u001b[39mself\u001b[39m, url: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    448\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Loads a web page in the current browser session.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 449\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexecute(Command\u001b[39m.\u001b[39;49mGET, {\u001b[39m\"\u001b[39;49m\u001b[39murl\u001b[39;49m\u001b[39m\"\u001b[39;49m: url})\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/selenium/webdriver/remote/webdriver.py:440\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    438\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_executor\u001b[39m.\u001b[39mexecute(driver_command, params)\n\u001b[1;32m    439\u001b[0m \u001b[39mif\u001b[39;00m response:\n\u001b[0;32m--> 440\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merror_handler\u001b[39m.\u001b[39;49mcheck_response(response)\n\u001b[1;32m    441\u001b[0m     response[\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_unwrap_value(response\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[1;32m    442\u001b[0m     \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/selenium/webdriver/remote/errorhandler.py:245\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    243\u001b[0m         alert_text \u001b[39m=\u001b[39m value[\u001b[39m\"\u001b[39m\u001b[39malert\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    244\u001b[0m     \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[39m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[0;32m--> 245\u001b[0m \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[0;31mTimeoutException\u001b[0m: Message: timeout: Timed out receiving message from renderer: -331.937\n  (Session info: chrome=113.0.5672.126)\nStacktrace:\n0   chromedriver                        0x00000001031538ac chromedriver + 4257964\n1   chromedriver                        0x000000010314bf40 chromedriver + 4226880\n2   chromedriver                        0x0000000102d889d4 chromedriver + 281044\n3   chromedriver                        0x0000000102d7284c chromedriver + 190540\n4   chromedriver                        0x0000000102d72574 chromedriver + 189812\n5   chromedriver                        0x0000000102d71198 chromedriver + 184728\n6   chromedriver                        0x0000000102d71620 chromedriver + 185888\n7   chromedriver                        0x0000000102d7f22c chromedriver + 242220\n8   chromedriver                        0x0000000102d92b8c chromedriver + 322444\n9   chromedriver                        0x0000000102d71b20 chromedriver + 187168\n10  chromedriver                        0x0000000102d929d8 chromedriver + 322008\n11  chromedriver                        0x0000000102dfa9bc chromedriver + 747964\n12  chromedriver                        0x0000000102db798c chromedriver + 473484\n13  chromedriver                        0x0000000102db898c chromedriver + 477580\n14  chromedriver                        0x0000000103112900 chromedriver + 3991808\n15  chromedriver                        0x0000000103116354 chromedriver + 4006740\n16  chromedriver                        0x0000000103116940 chromedriver + 4008256\n17  chromedriver                        0x000000010311c33c chromedriver + 4031292\n18  chromedriver                        0x0000000103116f34 chromedriver + 4009780\n19  chromedriver                        0x00000001030ef490 chromedriver + 3847312\n20  chromedriver                        0x00000001031349f4 chromedriver + 4131316\n21  chromedriver                        0x0000000103134b4c chromedriver + 4131660\n22  chromedriver                        0x0000000103145230 chromedriver + 4198960\n23  libsystem_pthread.dylib             0x00000001a7cee06c _pthread_start + 148\n24  libsystem_pthread.dylib             0x00000001a7ce8e2c thread_start + 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "len(links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "driver = webdriver.Chrome()\n",
     "\n",
@@ -133,7 +114,6 @@
     "page_number = 1\n",
     "\n",
     "while True:\n",
-    "    print(\"PAGE \",page_number,\" LESGO!\")\n",
     "    current_page_url = generate_page_url(dashboard_url, page_number)\n",
     "    driver.get(current_page_url)\n",
     "    # WebDriverWait(driver, 10).until(EC.url_to_be(current_page_url))\n",
@@ -364,18 +344,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(links)"
    ]
@@ -384,18 +353,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_properti"
    ]
