--- a/WebScrapCode.ipynb
+++ b/WebScrapCode.ipynb
@@ -139,7 +139,7 @@
     "# Scrape dan simpan dalam CSV\n",
     "with open(csv_file, 'w', newline='', encoding='utf-8') as file:\n",
     "    writer = csv.writer(file)\n",
-    "    writer.writerow(['Jumlah Kamar Tidur', 'Jumlah Kamar Mandi', 'Luas Bangunan', 'Luas Tanah'])\n",
+    "    writer.writerow(['Jumlah Kamar Tidur', 'Jumlah Kamar Mandi', 'Luas Bangunan', 'Luas Tanah','Harga'])\n",
     "\n",
     "    for link in links_array[:600]:  # Mengambil 600 data pertama\n",
     "        driver.get(link)  # Buka halaman detail rumah berdasarkan link\n",
